--- a/styles.css
+++ b/styles.css
@@ -20,10 +20,15 @@ header {
   text-align: center;
 }
 
+header img.logo {
+  height: 60px;
+  vertical-align: middle;
+  margin-right: 10px;
+}
+
 header h1 {
-  font-size: 28px;
-  font-weight: bold;
-  margin-bottom: 10px;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 nav a {
